; ModuleID = '/home/carl/AnghaBench/darwin-xnu/pexpert/arm/extr_pe_init.c_pe_prepare_images.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/pexpert/arm/extr_pe_init.c_pe_prepare_images.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_5__ = type { i64, i64, i64, i64, i64 }

@PE_state = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@default_progress = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@default_progress_data = common dso_local global i32* null, align 8
@scale = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pe_prepare_images to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pe_prepare_images() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @PE_state, i32 0, i32 0, i32 0), align 4
  %3 = and i32 1, %2
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %0
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @default_progress, i32 0, i32 0), align 8
  store i64 %6, i64* %1, align 8
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @default_progress, i32 0, i32 1), align 8
  store i64 %7, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @default_progress, i32 0, i32 0), align 8
  %8 = load i64, i64* %1, align 8
  store i64 %8, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @default_progress, i32 0, i32 1), align 8
  br label %9

9:                                                ; preds = %5, %0
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
